# csv2cbio

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  bioportal_validation_auth.py  delete.sh  docker-compose.dev.yml  docker-compose.yml  dockerignore.url  env_default  generate.sh  import.sh  pyproject.toml  renovate.json  sample_env  utils.sh
cbio_importer/: __main__.py  example_study.yaml  init.sh
cbio_importer/study_templates/: __init__.py  _singletons.py  _utilities.py  cancer_type.py  cancer_type.txt  default_functions.py  patient.py  patient.txt  resource.py  resource.txt  resource_item.txt  sample.py  sample.txt  study.txt  time_series.py  time_series.txt
cbio_importer/validation_stub/: stub.py
example/: EXAMPLES.md  README.md  additional_data.csv  data.csv  functions.py  study.yaml
