[tool.poetry]
name = "cbio_importer"
version = "0.0.1"
description = "CBioPortal Importer Image"
authors = ["BBMRI ERIC <jiri.horak@bbmri-eric.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
# pydantic = {extras = ["dotenv"], version = "^2.0.0"}
numpy = "^1.22.3"
pandas = "^2.2.2"
pydantic-settings = "^2.0.2"
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
debugpy = "^1.5.1"
isort = "^5.10.1"
psutil = "^5.9.0"
pycodestyle = "^2.8.0"
pylint = "^3.0.0"
pytest-aioresponses = "^0.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest = "^8.0.0"
requests-mock = "^1.9.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MASTER"]
ignored-modules = ["pydantic"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0613,E0213,W0603,W0231,E1136,W0707,W0622,W0201,E0401,W3101,W0212,W0621"
